# habit-tracker

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  main.cpp  makefile  version.hpp  version.hpp.in
.cache/clangd/index/: animation.cpp.6A6C78EFA82FE1E5.idx  animation.hpp.BC9915C09EB06463.idx  automerge.cpp.56D61A027A0B0874.idx  autoreset.hpp.EE6C8B2EC0F5E913.idx  blink.cpp.919400C960E638FF.idx  bold.cpp.D1AE91CDA041E295.idx  border.cpp.83CEBA9D4379F150.idx  box.cpp.963F1054054C366D.idx  box.hpp.D55B865B733A5C56.idx  box_helper.cpp.302B63FBEFA685D3.idx  box_helper.hpp.F5709221CBD7D107.idx  button.cpp.4010FF7BED38B2DE.idx  canvas.cpp.6DF23EE4B27022FC.idx  canvas.hpp.9AFD586FA92CB4FA.idx  captured_mouse.hpp.EDB64ACDE92965CC.idx  catch_event.cpp.70E3ED1511DD11B1.idx  checkbox.cpp.DDF3F359D773DBD7.idx  clear_under.cpp.3DC910D30DD2852F.idx  collapsible.cpp.170734E2ED5E9BA9.idx  color.cpp.DDEFFA968DA27883.idx  color.cpp.FEE945D98957283A.idx  color.hpp.1B8A29923CA6BC22.idx  color_info.cpp.9B93F7DA6A90F072.idx  color_info.hpp.53FD22A038F72F8B.idx  component.cpp.F72F485E5D8E486B.idx  component.hpp.DAD6FA8EC5DBF2DC.idx  component_base.hpp.4C0321D0569DD9CF.idx  component_options.cpp.E64479BEB7F25ECA.idx  component_options.hpp.F04888D175B32053.idx  composite_decorator.cpp.6D9D09D3FFDC10A7.idx  container.cpp.8C2AA4F9EE223C34.idx  dbox.cpp.F54AD269BF45B591.idx  deprecated.hpp.BF245C6CBA9B73A9.idx  deprecated.hpp.D51BB2D0206A3D95.idx  dim.cpp.39F95D6EF275D523.idx  direction.hpp.AA030E25F2FB17CC.idx  dropdown.cpp.A5E41DCC7487C834.idx  elements.hpp.7FC822CA8393760B.idx  event.cpp.152E632BA11F922F.idx  event.hpp.8B9FEA0D6C0216E4.idx  (+78 more)
.github/workflows/: c-cpp.yml
include/: version.hpp
src/: main.cpp
